--- a/hi1.html
+++ b/hi1.html
@@ -1,12 +1,8 @@
 <u><h1>ABOUT ME!</h1></u>
 
-<p>I really like <em>coding</em> languages like HTML and Python!</p>
+<p>I really like languages like HTML and Python!</p>
 
-<p>I live in the UK and I am 11 years old!</p>
-
-<p>I have been fascinated by languages since I was young, However I didn't know how to <em>write</em> with them.<p/>
-
-<p>Until I came across Claude the AI, it helped me make this text as you are reading this, Thank you!!!<p/>
+<p>I have been fascinated by languages since I was young, However I didn't know how to <em>write</em> with them.<p/>
 
 <button>Accept</button>
 <button>Decline</button>
