Fix HTML formatting issues and update content

--- a/hi1.html
+++ b/hi1.html
@@ -26,7 +26,7 @@ HTML is super easy for absolute beginners<br> like me for example, its easy to l
 <p>HTML is super easy to learn!<br>
 Just learn the tags and their attributes!<br>
 For example, to make a paragraph, use the tag p, if you want to break a line, use the tag!<br>
-, to make a heading use the tag h1,h2,h3 etc.<br>
+To make a heading use the tag h1,h2,h3 etc.<br>
 To make a link use the tag a with the attribute href.<br>
 To make a button use the tag button.<br>
 To make an image use the tag img with the attribute src.<br>
@@ -39,4 +39,5 @@ Happy coding!</p>
 <p>I hope more people will learn HTML!</p>
 <footer>
     <p>© 2026 About-Me!</p>
+
 
