Enhance HTML content with list and fixes
Added a list of items and corrected HTML structure.

--- a/hi1.html
+++ b/hi1.html
@@ -38,8 +38,15 @@ Happy coding!</p>
 
 <p>I hope more people will learn HTML!</p>
 <u><h2>So, whats next for this website?</h2></u>
+<ul>
+<li>Item1</li>
+    <li>Item2</li>
+    
+</ul>
+    
 <footer>
     <p>© 2026 About-Me!</p>
+
 
 
 
