Fix HTML structure and add missing closing tags

--- a/hi1.html
+++ b/hi1.html
@@ -36,7 +36,7 @@ To make a horizontal line use the tag hr.<br>
 To make a footer use the tag footer.<br>
 Happy coding!</p>
 
-<u></u><h2>Things I find interesting!</h2></u>
+<u><h2>Things I find interesting!</h2></u>
 <ul>
 <li>HTML</li>
 <li>CSS</li>
@@ -56,6 +56,7 @@ Happy coding!</p>
 <p>I hope more people will learn HTML!</p>
 <footer>
     <p>© 2026 About-Me!</p>
+
 
 
 
